fix: adding correct work hours and get page element

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8"> <!-- Adicione esta linha -->
   <title>Work Hours Calculator</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -8,6 +9,8 @@
   <h1>Calculadora de Horas Trabalhadas</h1>
   <button id="calculate-button">Calcular Horas</button>
   <p id="result" style="color: black;"></p>
+  <p id="additional-text"></p> <!-- Elemento para texto adicional -->
+  <p id="leaving-hours"></p> <!-- Elemento para horario de saida-->
   <script src="popup.js"></script>
 </body>
 </html>
